5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4084/executions/1578_1330.log
== TEST (2019-03-19 16:55:24) 
-- CODE:
print("round(41,6666666667)")
-- OUTPUT:
round(41,6666666667)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:55:38) 
-- CODE:
print("round(41,6666666667)")
-- EXECUTION TIME:
0.19518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,6666666667)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:56:16) 
-- CODE:
print"(round(41,6666666667)")
-- ERROR:
File "XXXX", line 1
    print"(round(41,6666666667)")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:56:37) 
-- CODE:
print"(round(41,6666666667))"
-- ERROR:
File "XXXX", line 1
    print"(round(41,6666666667))"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:57:22) 
-- CODE:
print("round(41,66)")
-- OUTPUT:
round(41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:57:37) 
-- CODE:
print("round(41,66)")
-- EXECUTION TIME:
0.145082
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:57:50) 
-- CODE:
print("41,66")
-- EXECUTION TIME:
0.144779
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41,66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:58:01) 
-- CODE:
print("41,66")
-- OUTPUT:
41,66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:58:10) 
-- CODE:
print("41,66")
-- EXECUTION TIME:
0.163271
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41,66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:58:23) 
-- CODE:
print("42")
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:58:30) 
-- CODE:
print("42")
-- EXECUTION TIME:
0.178487
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:59:31) 
-- CODE:
print("round(41.66666)")
-- OUTPUT:
round(41.66666)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:00:12) 
-- CODE:
print("round("41.66666")")
-- ERROR:
File "XXXX", line 1
    print("round("41.66666")")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:00:39) 
-- CODE:
print(round("41.66666"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round("41.66666"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:01:10) 
-- CODE:
print(round(41,66666)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:01:26) 
-- CODE:
print(round(41,66666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:01:38) 
-- CODE:
print(round(41,66666))
-- EXECUTION TIME:
0.13352
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:01:42) 
-- CODE:
print(round(41,66666))
-- EXECUTION TIME:
0.142104
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:01:45) 
-- CODE:
print(round(41,66666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:02:20) 
-- CODE:
print(round(41,666666667))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:02:27) 
-- CODE:
print(round(41,666666667))
-- EXECUTION TIME:
0.133153
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:02:38) 
-- CODE:
print(round(41,66666667))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:02:45) 
-- CODE:
print(round(41,66666667))
-- EXECUTION TIME:
0.148103
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:25) 
-- CODE:
print(round(41,66666666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:35) 
-- CODE:
print(round(41,66666666))
-- EXECUTION TIME:
0.209279
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:40) 
-- CODE:
print(round(41,66666666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:27) 
-- CODE:
a = 6
conta = 250 
c = conta / a
print(round(c,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:31) 
-- CODE:
a = 6
conta = 250 
c = conta / a
print(round(c,2))
-- EXECUTION TIME:
0.142744
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
